- Increased padding around button rows - Fixed columns CSS in Chrome - Adding spacing above titles

--- a/_sass/_links-buttons.scss
+++ b/_sass/_links-buttons.scss
@@ -2,7 +2,7 @@
     text-align: center;
     display: block;
     width: 100%;
-    margin: 1em 0;
+    margin: 3em 0;
 }
 
 .button {
