--- a/_sass/_new-look.scss
+++ b/_sass/_new-look.scss
@@ -152,13 +152,15 @@ time {
     color: $blue;
     text-align: center;
     margin-top: 3rem;
+    margin-bottom: 1rem;
 }
 
 .columns-2 {
     column-width: 90%;
     @media(min-width:$md) {
-        column-count: 2;
-        columns: 2;    
+        -webkitcolumn-count: 2;
+               column-count: 2;
+                    columns: 2;    
     }
     li { 
     }
