--- a/_sass/alanmoore.scss
+++ b/_sass/alanmoore.scss
@@ -366,7 +366,7 @@ img {
     font-weight: normal;  
     text-transform: uppercase;
     text-align: center;
-    margin-top: 0;
+    margin-top: 1em;
     margin-bottom: 1em;
     .title + & {
         margin-top: 0.4em;
